// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar with authed user should match the snapshot 1`] = `
<div>
  <div />
  <div>
    <nav
      class="navbar navbar-expand-lg bg-primary"
      data-testid="menu"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand link-light"
          href="/"
        >
          Employee Polls
        </a>
        <div
          class="collapse navbar-collapse"
          id="navbarText"
        >
          <ul
            class="navbar-nav me-auto mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-light"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/leaderboard"
              >
                Leaderboard
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/add"
              >
                Add question
              </a>
            </li>
          </ul>
          <ul
            class="navbar-nav mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <span
                class="nav-link link-light"
              >
                <div
                  class="avatar"
                >
                  <img
                    alt="Avatar"
                    class="avatar"
                    src="/assets/avatar_1.jpg"
                  />
                </div>
                Sarah Edo
              </span>
            </li>
            <li
              class="nav-item"
            >
              <span
                class="nav-link link-light logout"
              >
                Logout
              </span>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="container"
    >
      <div
        role="contentinfo"
      >
        <div
          class="card mt-5 p-3"
        >
          <ul
            class="nav nav-pills mt-3"
            role="tablist"
          >
            <li
              class="nav-item"
              role="presentation"
            >
              <button
                class="nav-link active"
                id="unanswered-questions"
                role="tab"
                type="button"
              >
                Unanswered Questions
              </button>
            </li>
            <li
              class="nav-item"
              role="presentation"
            >
              <button
                class="nav-link "
                id="answered-questions"
                role="tab"
                type="button"
              >
                Answered Questions
              </button>
            </li>
          </ul>
          <div
            class="tab-content"
          >
            <div
              class="tab-pane fade mt-5 active show"
              id="unanswered-questions"
              role="tabpanel"
            >
              <div
                class="row row-cols-4"
                data-testid="unanswered-questions"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar without authed user should match the snapshot 1`] = `
<div>
  <div />
  <div>
    <nav
      class="navbar navbar-expand-lg bg-primary"
      data-testid="menu"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand link-light"
          href="/"
        >
          Employee Polls
        </a>
        <div
          class="collapse navbar-collapse"
          id="navbarText"
        >
          <ul
            class="navbar-nav me-auto mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link active link-light"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/leaderboard"
              >
                Leaderboard
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/add"
              >
                Add question
              </a>
            </li>
          </ul>
          <ul
            class="navbar-nav mb-2 mb-lg-0"
          >
            <li
              class="nav-item"
            >
              <a
                class="nav-link link-light"
                href="/login"
              >
                Login
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <div
      class="container"
    >
      <div
        class="card auth mt-5 m-auto"
        role="contentinfo"
      >
        <div
          class="card-header bg-primary text-light"
        >
          <h2>
            Employee Polls
          </h2>
        </div>
        <div
          class="card-body"
        >
          <h5
            class="card-title"
          >
            Login
          </h5>
          <form>
            <div
              class="mb-3"
            >
              <label
                class="form-label"
                for="username"
              >
                Username
              </label>
              <input
                autocomplete="on"
                class="form-control"
                placeholder="Enter your username"
                type="text"
              />
            </div>
            <div
              class="mb-3"
            >
              <label
                class="form-label"
                for="password"
              >
                Password
              </label>
              <input
                class="form-control"
                placeholder="Enter your password"
                type="password"
              />
            </div>
            <button
              class="btn btn-primary"
              type="submit"
            >
              Sign in
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
